force-app/main/default/objects/Litmos__UserProgramResult__c/Litmos__UserProgramResult__c.object-meta.xml
<CustomObject>
    <label>User Program Result</label>
    <nameField>
        <displayFormat>UPR-{00000000}</displayFormat>
        <label>UserProgramResults Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Program Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>