force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__Completed__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>