force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__FinishDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__FinishDate__c</fullName>
    <label>Completed date</label>
    <type>DateTime</type>
</CustomField>