force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__isProcessedContactBatch__c.field-meta.xml
<CustomField>
    <fullName>Litmos__isProcessedContactBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProcessedContactBatch</label>
    <type>Checkbox</type>
</CustomField>