force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__LastAttemptDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LastAttemptDate__c</fullName>
    <label>Last Attempt Date</label>
    <type>DateTime</type>
</CustomField>