force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Program_Code__c</fullName>
    <formula>Litmos__ProgramID__r.Litmos__Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program code</label>
    <type>Text</type>
</CustomField>