force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__ProgramID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ProgramID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Litmos__Program__c</referenceTo>
    <relationshipLabel>User Program Results</relationshipLabel>
    <relationshipName>User_Program_Results</relationshipName>
    <type>Lookup</type>
</CustomField>