force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>