force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__status__c.field-meta.xml
<CustomField>
    <fullName>Litmos__status__c</fullName>
    <formula>IF( ISBLANK(Litmos__StartDate__c)=true , &apos;Not Started&apos;, IF( Litmos__Completed__c = true, &apos;Completed&apos;, &apos;Started&apos;)  )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>