force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__User_Name__c.field-meta.xml
<CustomField>
    <fullName>Litmos__User_Name__c</fullName>
    <formula>IF( Litmos__ContactID__c == null , IF( Litmos__UserID__c == null , &apos;&apos; , Litmos__UserID__r.FirstName &amp; &apos; &apos; &amp; Litmos__UserID__r.LastName )  ,   Litmos__ContactID__r.LastName   )</formula>
    <label>User Name</label>
    <type>Text</type>
</CustomField>