force-app/main/default/objects/Litmos__UserProgramResult__c/fields/Litmos__UserID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Program_Results</relationshipName>
    <type>Lookup</type>
</CustomField>