force-app/main/default/objects/Litmos__UserProgramResult__c/listViews/Litmos__All.listView-meta.xml
<ListView>
    <fullName>Litmos__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Litmos__ContactID__c</columns>
    <columns>Litmos__ProgramID__c</columns>
    <columns>Litmos__LitmosID__c</columns>
    <columns>Litmos__User_Name__c</columns>
    <columns>Litmos__UserID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>